# Orange-GameEngine

./: .gitignore  CMakeLists.txt  ENGINE_STATUS.md  NEXT_SESSION_TODO.md  NEXT_VERSION_NOTES.md  README.md  main.cpp  patch.py  patch2.py  render_graph.dot
.github/workflows/: ci.yml
demo/: PlayableDemo.cpp
engine/core/: Engine.cpp  Engine.h  Math.h  Profiler.cpp  Profiler.h
engine/graphics/: AssetManager.cpp  AssetManager.h  MeshLoader.cpp  MeshLoader.h  RenderGraph.cpp  RenderGraph.h  Renderer.cpp  Renderer.h  TextureLoader.cpp  TextureLoader.h  ThirdPersonCamera.cpp  ThirdPersonCamera.h
engine/input/: InputManager.cpp  InputManager.h
engine/optimization/: Profiler.cpp  Profiler.h
engine/physics/: Physics.cpp  Physics.h
engine/rhi/: IRhiDevice.cpp  IRhiDevice.h
game/: Game.cpp  Game.h
game/enemies/: Enemy.cpp  Enemy.h
game/player/: Player.cpp  Player.h
include/: third-person-shooter-engine  third-person-shooter-engine.h
tools/: orange_texcomp.cpp
